Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
 <li><p>Ready-to-use and easy-to-extend view controllers to display and interact with badges.</p></li>
 <li><p>Built-in support for sharing badges.</p></li>
 <li><p>Ready-to-use library of badge images.</p></li>
-</ul><h3>Getting Started</h3>
+</ul><p><img src="screenshots/img1.png" alt="badges"><img src="screenshots/img2.png" alt="badge actions"></p>
+
+<h3>Getting Started</h3>
 
 <p>Drag the <code>libBadgeKit.a</code> file into the Frameworks section of your XCode project. And make sure that it is included in your product targets.</p>
 
