--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <li><p>Ready-to-use and easy-to-extend view controllers to display and interact with badges.</p></li>
 <li><p>Built-in support for sharing badges.</p></li>
 <li><p>Ready-to-use library of badge images.</p></li>
-</ul><p><img src="screenshots/img1.png" alt="badges"><img src="screenshots/img2.png" alt="badge actions"></p>
+</ul><p><img src="https://raw.github.com/ringful/BadgeCenter/master/screenshots/img1.png" alt="badges"><img src="https://raw.github.com/ringful/BadgeCenter/master/screenshots/img2.png" alt="badge actions"></p>
 
 <h3>Getting Started</h3>
 
