Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section id="main-content">
           <h1>Welcome to the Badge Center</h1>
 
-<p>The Badge Center is an iOS SDK (Android coming soon) that allows you to easily incorporate "badges" in to your applications. Popularized by foursquare, farmville, and others, badges are powerful ways to encourage desired user behaviors in your app by turning your app itself into a "game".</p>
+<p>The Badge Center is an iOS SDK (Android coming soon) that allows you to easily incorporate "badges" in to your applications. Popularized by foursquare, farmville, and others, badges are powerful ways to encourage desired user behaviors in your app by turning your app itself into a "game". This software is licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache license, version 2.0</a>.</p>
 
 <p>Key benefits of the SDK include:</p>
 
